FIX: STILL NO CSS BUT WORKING ON IT(NGINX)

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,5 +1,7 @@
+user www-data;
 events {}
 http {
+    include /etc/nginx/mime.types;
 server {
     # CONF SSL
     listen 443 ssl;
@@ -17,12 +19,18 @@ server {
 
 
     location / { 
-            try_files $uri $uri/ =404;
-        }
-        location ~ [^/]\.php(/|$) {
-            fastcgi_pass wordpress:9000;
-            include fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        try_files $uri $uri/ =404;
+    }
+    location ~ \.css {
+        add_header  Content-Type    text/css;
+    }
+    location ~ [^/]\.php(/|$) {
+        fastcgi_pass wordpress:9000;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        include fastcgi_params;
     }
     
 }
