--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:bullseye
 
-RUN apt-get update -y
-RUN apt-get upgrade -y
+RUN apt update -y
+RUN apt upgrade -y
 RUN apt-get install mariadb-server -y
 
 RUN mkdir -p /var/run/mysqld \
@@ -11,6 +11,7 @@ RUN mkdir -p /var/run/mysqld \
 EXPOSE 3306
 
 COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/.
-COPY ./tools/init.sql /etc/mysql/init.sql
+COPY ./tools/init.sh /bin/init.sh
+RUN chmod 755 /bin/init.sh
 
-CMD ["mysqld"]
+CMD ["/bin/init.sh"]
