FIX: SECOND USER(WORDPRESS)

--- a/srcs/.env
+++ b/srcs/.env
@@ -10,4 +10,9 @@ MYSQL_USER=lleciak
 MYSQL_PASSWORD=lleciak42
 MYSQL_DATABASE=lleciak_data
 
+# WP
 WP_CONFIG = "/var/www/html/wp-content/wp-config.php"
+
+WP_USR = mister_user
+WP_EMAIL = leciak.louise@gmail.com
+WP_PWD = userMDP
