--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,26 +1,30 @@
 volumes:
-  wordpress:
+  wordpress_database:
+    name: wordpress
     driver: local
     driver_opts:
       type: none
       device: /home/lleciak/data/wordpress
       o: bind
-  mariadb:
+
+  mariadb_database:
+    name: mariadb
     driver: local
     driver_opts:
       type: none
-      device: /home/lleciak/data/mysql
+      device: /home/lleciak/data/mariadb
       o: bind
-
+  
 networks:
   inception:
+    name: inception
     driver: bridge
 
 services:
   nginx:
     container_name: nginx
     volumes:
-      - wordpress:/var/www/html
+       - wordpress_database:/var/www/html/
     networks:
       - inception
     depends_on:
@@ -32,7 +36,7 @@ services:
     ports:
       - "443:443"
     restart: on-failure
-
+       
   mariadb:
     container_name: mariadb
     networks:
@@ -42,11 +46,13 @@ services:
       dockerfile: Dockerfile
     env_file: .env
     volumes:
-      - mariadb:/var/lib/mysql
+       - mariadb_database:/var/lib/mysql
     restart: unless-stopped
     expose:
       - "3306"
+  
 
+    
   wordpress:
     container_name: wordpress
     networks:
@@ -58,7 +64,7 @@ services:
       dockerfile: Dockerfile
     env_file: .env
     volumes:
-      - wordpress:/var/www/html
+       - wordpress_database:/var/www/html
     restart: on-failure
     expose:
       - "9000"
