--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -5,7 +5,7 @@ http {
 server {
     # CONF SSL
     listen 443 ssl;
-    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_protocols TLSv1.2 TLSv1.3; # change l'url de htpp a https, protocole de securisation
     ssl_certificate /etc/nginx/ssl/inception.crt;
     ssl_certificate_key /etc/nginx/ssl/inception.key;
 
@@ -19,14 +19,14 @@ server {
 
 
     location / { 
-        try_files $uri $uri/ =404;
+        try_files $uri $uri/ =404;#renvoyer nimporte quelle requete que je connais pas sur 404 error
     }
     location ~ \.css {
         add_header  Content-Type    text/css;
     }
-    location ~ [^/]\.php(/|$) {
+    location ~ [^/]\.php(/|$) { # pour toute requete php
         fastcgi_pass wordpress:9000;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$; #comment renvoyer les requetes sur le prot 9000
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
